<resources>
    <string name="app_name">위고</string>

    <string name="download_title">다운로드 지도 목록</string>
    <string name="setting_title">설정</string>

    <string name="save_date">저장 일자 : %s</string>
    <string name="file_size">저장 용량 : %s</string>
    <string name="searchbar_hint">목적지를 입력해주세요..</string>
    <string name="fab_content_desc">메뉴 버튼</string>

    <!-- Preference Titles -->
    <string name="header_sound">소리</string>

    <!-- Viberation Preferences -->
    <string name="title_viberation">진동</string>
    <string name="summary_on_viberation">진동 꺼짐</string>
    <string name="summary_off_viberation">진동 켜짐</string>

    <!-- Sound Level Preferences -->
    <string name="title_sound_level">음량 조절</string>
    <string name="summary_sound_level">음량을 조절합니다.</string>

    <!-- Preference Titles -->
    <string name="header_map">지도</string>

    <!-- Viberation Preferences -->
    <string name="title_save_location">SD 카드에 저장하기</string>
    <string name="summary_on_save_location">내부 저장소</string>
    <string name="summary_off_save_location">SD 카드 저장소</string>


    <!-- 🔽 ARCore 관련 문자열 추가 -->
    <string translatable="false" name="depth_use_explanation">
        When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.
    </string>
    <string translatable="false" name="button_text_enable_depth">Enable</string>
    <string translatable="false" name="button_text_disable_depth">Disable</string>
    <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
    <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
    <string translatable="false" name="done">Done</string>
    <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>

    <string-array translatable="false" name="depth_options_array">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>

    <string-array translatable="false" name="instant_placement_options_array">
        <item>Enable Instant Placement</item>
    </string-array>

</resources>