<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/header_sound">

        <SwitchPreferenceCompat
            app:key="vibration"
            app:title="@string/title_viberation"
            app:summaryOff="@string/summary_on_viberation"
            app:summaryOn="@string/summary_off_viberation" />

        <SeekBarPreference
            app:key="sound_level"
            app:title="@string/title_sound_level"
            app:summary="@string/summary_sound_level"
            app:defaultValue="50"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_map">

        <SwitchPreferenceCompat
            app:key="vibration"
            app:title="@string/title_save_location"
            app:summaryOff="@string/summary_on_save_location"
            app:summaryOn="@string/summary_off_save_location" />

        <Preference
            android:key="map_download"
            android:title="지도 확인"
            android:summary="내부 저장된 지도 파일들을 확인 합니다."
            android:icon="@drawable/ic_file_size"
            android:onClick="onMapItemClick"
            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>