<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/header_sound"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="vibration"
            app:title="@string/title_viberation"
            app:summaryOff="@string/summary_on_viberation"
            app:summaryOn="@string/summary_off_viberation"
            app:icon="@drawable/ic_vibration"
            app:allowDividerBelow="true" />

        <Preference
            app:layout="@layout/add_board_down"/>

        <SeekBarPreference
            android:textStyle="bold"
            app:defaultValue="50"
            app:key="sound_level"
            app:showSeekBarValue="true"
            app:summary="@string/summary_sound_level"
            app:title="@string/title_sound_level"
            app:icon="@drawable/ic_sound_up"/>

    </PreferenceCategory>

</PreferenceScreen>